@@ -8,13 +8,14 @@ package org.elasticsearch.xpack.ml.action;
 
 import org.elasticsearch.ElasticsearchStatusException;
 import org.elasticsearch.common.document.DocumentField;
+import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.search.SearchHit;
+import org.elasticsearch.search.SearchHits;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.xpack.core.ml.job.config.JobState;
 import org.elasticsearch.xpack.core.ml.job.results.ForecastRequestStats;
 
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -34,7 +35,7 @@ public class TransportDeleteForecastActionTests extends ESTestCase {
 
             // This should not throw.
             TransportDeleteForecastAction.extractForecastIds(
-                forecastRequestStatsHits.toArray(new SearchHit[0]),
+                forecastRequestStatsHits.toArray(SearchHits.EMPTY),
                 randomFrom(JobState.values()),
                 randomAlphaOfLength(10)
             );
@@ -53,7 +54,7 @@ public class TransportDeleteForecastActionTests extends ESTestCase {
                 JobState jobState = randomFrom(JobState.CLOSED, JobState.CLOSING, JobState.FAILED);
                 try {
                     TransportDeleteForecastAction.extractForecastIds(
-                        forecastRequestStatsHits.toArray(new SearchHit[0]),
+                        forecastRequestStatsHits.toArray(SearchHits.EMPTY),
                         jobState,
                         randomAlphaOfLength(10)
                     );
@@ -66,7 +67,7 @@ public class TransportDeleteForecastActionTests extends ESTestCase {
                 expectThrows(
                     ElasticsearchStatusException.class,
                     () -> TransportDeleteForecastAction.extractForecastIds(
-                        forecastRequestStatsHits.toArray(new SearchHit[0]),
+                        forecastRequestStatsHits.toArray(SearchHits.EMPTY),
                         jobState,
                         randomAlphaOfLength(10)
                     )
@@ -76,7 +77,7 @@ public class TransportDeleteForecastActionTests extends ESTestCase {
     }
 
     private static SearchHit createForecastStatsHit(ForecastRequestStats.ForecastRequestStatus status) {
-        Map<String, DocumentField> documentFields = new HashMap<>(2);
+        Map<String, DocumentField> documentFields = Maps.newMapWithExpectedSize(2);
         documentFields.put(
             ForecastRequestStats.FORECAST_ID.getPreferredName(),
             new DocumentField(ForecastRequestStats.FORECAST_ID.getPreferredName(), Collections.singletonList(""))
@@ -85,6 +86,8 @@ public class TransportDeleteForecastActionTests extends ESTestCase {
             ForecastRequestStats.STATUS.getPreferredName(),
             new DocumentField(ForecastRequestStats.STATUS.getPreferredName(), Collections.singletonList(status.toString()))
         );
-        return new SearchHit(0, "", documentFields, Collections.emptyMap());
+        SearchHit hit = SearchHit.unpooled(0, "");
+        hit.addDocumentFields(documentFields, Map.of());
+        return hit;
     }
 }
